--- a/TODO
+++ b/TODO
@@ -4,9 +4,17 @@
 #+PRIORITIES: 1 5 3 BLOCK(1) CRITICAL(2) MAJOR(3) MINOR(4) TRIVIAL(5)
 
 * Basics
-  - [ ] Basics
-  - [ ] Collections
-  - [ ] Enum
+  CLOCK: [2017-03-23 Thu 22:56]--[2017-03-23 Thu 23:08] =>  0:12
+  - enum
+  CLOCK: [2017-03-23 Thu 21:02]--[2017-03-23 Thu 21:23] =>  0:21
+  - collections
+  CLOCK: [2017-03-23 Thu 09:52]--[2017-03-23 Thu 10:01] =>  0:09
+  CLOCK: [2017-03-23 Thu 09:50]--[2017-03-23 Thu 09:50] =>  0:00
+  - basics completed
+
+  - [X] Basics
+  - [X] Collections
+  - [X] Enum
   - [ ] Pattern Matching
   - [ ] Control Structures
   - [ ] Functions
