add pattern matching

--- a/TODO
+++ b/TODO
@@ -15,7 +15,7 @@
   - [X] Basics
   - [X] Collections
   - [X] Enum
-  - [ ] Pattern Matching
+  - [X] Pattern Matching
   - [ ] Control Structures
   - [ ] Functions
   - [ ] Pipe Operator
