add Basics control structures

--- a/TODO
+++ b/TODO
@@ -16,7 +16,7 @@
   - [X] Collections
   - [X] Enum
   - [X] Pattern Matching
-  - [ ] Control Structures
+  - [X] Control Structures
   - [ ] Functions
   - [ ] Pipe Operator
   - [ ] Modules
