add basics functions

--- a/TODO
+++ b/TODO
@@ -17,7 +17,7 @@
   - [X] Enum
   - [X] Pattern Matching
   - [X] Control Structures
-  - [ ] Functions
+  - [X] Functions
   - [ ] Pipe Operator
   - [ ] Modules
   - [ ] Mix
