add basics modules

--- a/TODO
+++ b/TODO
@@ -19,7 +19,7 @@
   - [X] Control Structures
   - [X] Functions
   - [X] Pipe Operator
-  - [ ] Modules
+  - [X] Modules
   - [ ] Mix
   - [ ] Sigils
   - [ ] Documentation
