add doc of basics

--- a/TODO
+++ b/TODO
@@ -22,7 +22,7 @@
   - [X] Modules
   - [X] Mix
   - [X] Sigils
-  - [ ] Documentation
+  - [X] Documentation
   - [ ] Testing
   - [ ] Comprehensions
   - [ ] Strings
