--- a/TODO
+++ b/TODO
@@ -31,7 +31,7 @@
 * Advanced
   - [X] Erlang Interoperability
   - [X] Error Handling
-  - [ ] Executables
+  - [X] Executables
   - [ ] Concurrency
   - [ ] OTP Concurrency
   - [ ] OTP Supervisors
